--- a/index.html
+++ b/index.html
@@ -24,12 +24,13 @@
     </header>
 
     <main>
-        <!-- Hero Section -->
+        <!-- Hero Section îmbunătățit -->
         <section class="hero">
-            <div class="hero-content">
-                <h1 class="fade-in">Hi, I’m <span>Andreea S</span></h1>
-                <p class="fade-in delay1">A girly girl who loves building beautiful websites and spreading creativity online ✨</p>
-                <a href="portfolio.html" class="btn">Vezi proiectele mele</a>
+            <div class="hero-content fade-in">
+                <h1>Hi, I’m <span>Andreea S</span></h1>
+                <p>A girly girl who loves building <strong>beautiful websites</strong> and spreading creativity online ✨</p>
+                <a href="portfolio.html" class="btn btn-hero" aria-label="Vezi proiectele mele">Vezi proiectele mele</a>
+                <img src="hero-image.png" alt="Andreea S – Web Designer" class="hero-img">
             </div>
         </section>
 
@@ -37,7 +38,7 @@
         <section class="about-preview fade-in">
             <h2>Despre mine</h2>
             <p>Sunt o persoană pasionată de design web, detalii delicate și culori pastel. Îmi place să transform ideile în experiențe digitale pline de farmec și feminitate 💖</p>
-            <a href="about.html" class="btn light">Află mai multe</a>
+            <a href="about.html" class="btn light" aria-label="Află mai multe despre Andreea">Află mai multe</a>
         </section>
 
         <!-- Recent Projects -->
@@ -45,12 +46,10 @@
             <h2>Proiecte recente</h2>
             <div class="projects-grid">
                 <a href="portfolio.html#perfumstore" class="project-card" aria-label="Andreea's PerfumStore - magazin online Django">
-                    
                     <h3>Andreea's PerfumStore</h3>
                     <p>Magazin online de parfumuri dezvoltat în Django Python, cu experiență captivantă pentru cumpărători.</p>
                 </a>
                 <a href="portfolio.html#proiectcommerce" class="project-card" aria-label="Proiect Commerce - magazin online HTML, CSS, JavaScript">
-                   
                     <h3>Proiect Commerce</h3>
                     <p>Magazin online complet creat cu HTML5, CSS3 și JavaScript, responsive și interactiv pentru utilizatori și admin.</p>
                 </a>
@@ -78,3 +77,4 @@
     </footer>
 </body>
 </html>
+
