--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@
     <h1>Despre <span>mine</span></h1>
     <p>
       Sunt Andreea, pasionată de web design și tehnologie. Îmi place să combin creativitatea cu logica programării pentru a transforma ideile în experiențe digitale interactive și elegante. 
-      Fiecare proiect este pentru mine o oportunitate de a adăuga detalii delicate, culori pastel și elemente jucăușe, care să transmită personalitatea și feminitatea ideilor pe care le dezvolt. 💖
+      Fiecare proiect este o oportunitate de a adăuga detalii delicate, culori pastel și elemente jucăușe, care să transmită personalitatea și feminitatea ideilor pe care le dezvolt. 💖
     </p>
     <img src="img/andreea-hero.jpg" alt="Andreea S" class="hero-img fade-in-delay" loading="lazy">
   </div>
@@ -39,71 +39,61 @@
 <!-- Educație & Cursuri -->
 <section class="education fade-in">
   <h2>Cursuri și Educație</h2>
-  <div class="timeline-container">
+  <div class="timeline-container" role="list">
 
-    <!-- Python & Testare Automată -->
-    <div class="timeline-item">
+    <div class="timeline-item" role="listitem">
       <div class="timeline-year">Sept 2023 – Feb 2025</div>
       <div class="timeline-content">
         <strong>IT Factory Academy – Python și Testare Automată</strong>
-        <p>Acest curs recunoscut de Minister m-a învățat să creez proiecte de testare automată folosind Python, design pattern-ul POM și metodologia BDD. Am realizat primul meu proiect real în Mai 2024.</p>
-        <p><strong>Skill-uri tehnice:</strong> Python, Testare Automată, BDD, POM, Automatizare teste</p>
-    
-        </div>
+        <p>Am învățat să creez proiecte de testare automată folosind Python, design pattern-ul POM și metodologia BDD. Primul meu proiect real a fost finalizat în Mai 2024.</p>
+        <p><strong>Skill-uri:</strong> Python, Testare Automată, BDD, POM</p>
       </div>
     </div>
 
-    <!-- WordPress Website -->
-    <div class="timeline-item">
+    <div class="timeline-item" role="listitem">
       <div class="timeline-year">Martie 2024</div>
       <div class="timeline-content">
         <strong>WordPress Website – Portofoliu Online</strong>
         <p>Am creat un portofoliu online personalizat folosind WordPress, cu pagini interactive și design responsive.</p>
-        <p><strong>Skill-uri tehnice:</strong> WordPress, PHP, HTML, CSS, Responsive Design</p>
-     
+        <p><strong>Skill-uri:</strong> WordPress, PHP, HTML, CSS, Responsive Design</p>
       </div>
     </div>
 
-    <!-- Bazele de date -->
-    <div class="timeline-item">
+    <div class="timeline-item" role="listitem">
       <div class="timeline-year">Aprilie 2024</div>
       <div class="timeline-content">
         <strong>Baze de date</strong>
         <p>Curs de 3h pentru înțelegerea conceptelor de baze de date relaționale și manipularea tabelelor.</p>
-        <p><strong>Skill-uri tehnice:</strong> SQL, MySQL, Creare și modificare tabele</p>
-
+        <p><strong>Skill-uri:</strong> SQL, MySQL, Creare și modificare tabele</p>
       </div>
     </div>
 
-    <!-- Start in IT -->
-    <div class="timeline-item">
+    <div class="timeline-item" role="listitem">
       <div class="timeline-year">Mai 2024</div>
       <div class="timeline-content">
         <strong>Start in IT</strong>
         <p>Curs de 11h care explică domeniul IT, rolurile din industrie și cum să începi o carieră în IT.</p>
-        <p><strong>Skill-uri tehnice:</strong> IT Fundamentals, Planificare carieră IT</p>
-  
+        <p><strong>Skill-uri:</strong> IT Fundamentals, Planificare carieră IT</p>
       </div>
     </div>
 
-    <!-- Digital Stack Orange -->
-    <div class="timeline-item">
+    <div class="timeline-item" role="listitem">
       <div class="timeline-year">04 Aug – 10 Nov 2025</div>
       <div class="timeline-content">
         <strong>Digital Stack Orange – Web Front-End Development</strong>
         <p>Curs complet pentru dezvoltarea abilităților Front-End, cu proiecte practice și tehnici moderne de web design.</p>
-        <p><strong>Skill-uri tehnice:</strong> HTML, CSS, JavaScript, Responsive Design, UX/UI</p>
+        <p><strong>Skill-uri:</strong> HTML, CSS, JavaScript, Responsive Design, UX/UI</p>
       </div>
     </div>
 
   </div>
 </section>
 
-<!-- Experiență / Proiecte -->
+<!-- Experiență -->
 <section class="experience fade-in">
   <h2>Experiență</h2>
-  <div class="timeline-container">
-    <div class="timeline-item">
+  <div class="timeline-container" role="list">
+    <div class="timeline-item" role="listitem">
       <div class="timeline-year">Mai 2024</div>
       <div class="timeline-content">
         Primul proiect real finalizat
@@ -112,32 +102,32 @@
   </div>
 </section>
 
-<!-- Pasiuni și Hobby-uri -->
+<!-- Pasiuni & Hobby-uri -->
 <section class="skills fade-in">
   <h2>Pasiuni & Hobby-uri</h2>
-  <div class="skills-grid">
-    <div class="skill-card">
+  <div class="skills-grid" role="list">
+    <div class="skill-card" role="listitem">
       <h3>☕ Cafea dimineața</h3>
       <p>Îmi place să încep ziua cu o cafea aromată, inspirându-mă pentru cod și creativitate.</p>
     </div>
-    <div class="skill-card">
+    <div class="skill-card" role="listitem">
       <h3>🍸 Espresso Martini & Cocktail Vibes</h3>
       <p>Îmi place să mă relaxez savurând un Espresso Martini sau un cocktail elegant într-un loc cu atmosferă chic.</p>
     </div>
-    <div class="skill-card">
+    <div class="skill-card" role="listitem">
       <h3>🎨 Palete pastel & detalii delicate</h3>
       <p>Culorile pastel sunt mereu sursa mea de inspirație pentru design și creații digitale.</p>
     </div>
-    <div class="skill-card">
+    <div class="skill-card" role="listitem">
       <h3>🌸 Floricele & elemente jucăușe</h3>
       <p>Îmi place să adaug mici detalii jucăușe, care dau farmec și personalitate proiectelor mele.</p>
     </div>
-    <div class="skill-card">
+    <div class="skill-card" role="listitem">
       <h3>💻 Cod & creativitate</h3>
       <p>Combin logica și creativitatea pentru a crea site-uri interactive, elegante și prietenoase.</p>
     </div>
-    <div class="skill-card">
-      <h3>🎶 Atmosfera chic de club / lounge</h3>
+    <div class="skill-card" role="listitem">
+      <h3>🎶 Muzică lounge & vibe chic</h3>
       <p>Muzica și vibe-ul unui lounge elegant mă inspiră pentru mood-ul vizual al proiectelor mele.</p>
     </div>
   </div>
@@ -146,7 +136,7 @@
 <!-- Call to Action -->
 <section class="cta fade-in">
   <h2>Vrei să vezi portofoliul meu?</h2>
-  <a href="portfolio.html" class="btn">Vezi portofoliul</a>
+  <a href="portfolio.html" class="btn btn-hero">Vezi portofoliul</a>
 </section>
 
 <!-- Footer -->
@@ -155,9 +145,10 @@
   <div class="socials">
       <a href="https://www.instagram.com/l_andreea_22" target="_blank">Instagram</a>
   </div>
-  <button onclick="window.scrollTo({top: 0, behavior: 'smooth'});" class="back-to-top">↑ Sus</button>
+  <button onclick="window.scrollTo({top: 0, behavior: 'smooth'});" class="back-to-top" aria-label="Înapoi sus">↑</button>
 </footer>
 
 </body>
-</html> 
+</html>
+
 
