--- a/contact.html
+++ b/contact.html
@@ -4,11 +4,10 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Contact - Andreea S</title>
-<meta name="description" content="Contactează-mă pe Instagram, LinkedIn sau prin formular pentru colaborări și proiecte web design.">
+<meta name="description" content="Contactează-mă pe Instagram, LinkedIn sau prin alte platforme pentru colaborări și proiecte web design.">
 <link rel="stylesheet" href="style.css">
 <script defer src="script.js"></script>
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
-<!-- Font Awesome pentru iconițe -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-..." crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
@@ -27,13 +26,13 @@
 </header>
 
 <!-- Contact Section -->
-<section id="contact">
+<section id="contact" class="fade-in">
   <h2>Contactează-mă</h2>
-  <p>Mă poți găsi pe următoarele platforme sau trimite-mi un mesaj direct:</p>
+  <p>Mă poți găsi pe următoarele platforme sau să mă urmărești pentru proiecte și inspirație:</p>
 
   <div class="contact-cards">
     <!-- Instagram -->
-    <div class="contact-card">
+    <div class="contact-card fade-in">
       <div class="icon">
         <i class="fab fa-instagram"></i>
       </div>
@@ -41,16 +40,14 @@
     </div>
 
     <!-- LinkedIn -->
-    <div class="contact-card">
+    <div class="contact-card fade-in">
       <div class="icon">
         <i class="fab fa-linkedin"></i>
       </div>
       <p><a href="https://www.linkedin.com/in/andreealuizasandu" target="_blank">Andreea Luiza Sandu</a></p>
     </div>
   </div>
-
 </section>
-
 
 <!-- Footer -->
 <footer>
@@ -64,4 +61,3 @@
 
 </body>
 </html>
-
